packages/dubbd/manifests/gitlab-ssh-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-istio-shell
  namespace: gitlab
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: istio-controlplane
      podSelector:
        matchLabels:
          app: tenant-ingressgateway
          istio: ingressgateway
    ports:
    - port: 2222
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitlab-shell
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-shell
  namespace: gitlab
spec:
  egress:
  - to:
    - namespaceSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
  podSelector:
    matchLabels:
      app: gitlab-shell
  policyTypes:
  - Egress
